2009-06-16 Stephen Norris <srnorris@email.unc.edu>
	* dmbr_run.m: fixed error for mean curve plotting.
	* dmbr_plot_data: same.
	* Note: These files were actually altered in last commit, but because commit happened recursively, these comments didn't make it in (as they were not made yet).

2009-05-07 Stephen Norris <srnorris@email.unc.edu>
	* .dmbr_todo.txt: added Jeffrey fit viscosity comment 

2009-05-05  Jeremy Cribb <jcribb@email.unc.edu>
	* .cvsignore: added.  
	* dmbr_mean_creep_curves.m: removed.  obsolete.
	* dmbr_compute_mean_curves.m: added.  computes all significant mean values for dmbr datasets.
	* dmbr_plot_data.m: updated to include mean figures and plotting "stacked" sequences.
	* dmbr_analysis_gui.fig: same.
	* dmbr_analysis_gui.m: same.
	* dmbr_report.m: cosmetic changes only.  will soon update this substantially.
	* dmbr_run.m: computes offsets for each sequence/voltage.
	
	
2009-05-04  Jeremy Cribb <jcribb@email.unc.edu>
	* dmbr_plot_data.m: switched to plotting as a position of strain rather than a radial distance.

2009-05-04  Jeremy Cribb <jcribb@email.unc.edu>
	* dmbr_relaxation_time.m: added handling of edge case to avoid error.
	* dmbr_run.m: changed default analyses.
	* dmbr_analysis_gui.fig: prettified gui for linux.
	* dmbr_analysis_gui.m: prettified gui for linux.	

2008-03-04  Jeremy Cribb <jcribb@email.unc.edu>
	* dmbr_plot_data.m: added text annotations that indicate (S)tart and (E)nd points on the shear thinning curve (apparent viscosity vs. max shear rate)

2009-02-26  Jeremy Cribb <jcribb@email.unc.edu>
	* Initial Version of driven microbead rheology analysis package.
